UPDATE TODO LIST

--- a/TODO
+++ b/TODO
@@ -7,6 +7,8 @@ updates to revision
 - pagina front cuando haces login
 - revisar lo que devuelve el speller check de la ortografia
 - revisar las devoluciones de los scripts para el dashboard
+- cambiar icono comunicados por una alerta con badget
+- añádir darkmode
 
 para todos -> gestionar cuando devuelve error q no muestre el dashboard de resultados
 
