--- a/app/templates/tools/index.html.bak.3
+++ b/app/templates/tools/index.html.bak.3
@@ -15,32 +15,6 @@
         </a>
     </div>
 
-    <!-- General Category Info Cards -->
- <!-- Tools by Category -->
- <section id="categories" class="mt-5">
-    <h2 class="text-center mb-4">Tool Categories</h2>
-    <div class="row g-4">
-        {% for category, subcategories in grouped_tools.items() %}
-        <div class="col-lg-6 col-md-6 col-sm-12">
-            <!-- Header Card -->
-            <div class="card shadow-sm border-primary mb-3">
-                <div class="card-body text-center">
-                    <i class="fas fa-folder fa-2x text-primary mb-3"></i>
-                    <h5 class="card-title">{{ category }}</h5>
-                    <p class="card-text">
-                        <strong>{{ subcategories|length }}</strong> subcategories, 
-                        <strong>{{ subcategories.values()|map('length')|sum }}</strong> tools.
-                    </p>
-                    <a href="/categories/{{ category|replace(' ', '-') }}" class="btn btn-outline-primary">
-                        View Category <i class="fas fa-arrow-right"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-
-
     <!-- Most Used Tools Section -->
     <section id="most-used-tools" class="mt-5">
         <h2 class="text-center mb-4">Most Used Tools</h2>
@@ -83,47 +57,56 @@
         </div>
     </section>
 
-    {% for category, subcategories in grouped_tools.items() %}
-    <!-- Category Section -->
-    <div class="category-section mt-5">
-        <h2 class="text-primary">{{ category }}</h2>
-        <div class="accordion" id="{{ category|replace(' ', '_') }}Accordion">
+    <!-- Tools by Category -->
+    <section id="categories" class="mt-5">
+        <h2 class="text-center mb-4">Tools by Category</h2>
+        {% for category, subcategories in grouped_tools.items() %}
+        <div class="category-section mt-4">
+            <h3 class="text-primary">
+                <a href="/categories/{{ category|replace(' ', '-') }}" class="text-decoration-none text-primary">
+                    {{ category }}
+                </a>
+            </h3>
+            <div class="accordion" id="{{ category|replace(' ', '_') }}Accordion">
 
-            {% for subcategory, tools in subcategories.items() %}
-            <!-- Subcategory Accordion Item -->
-            <div class="accordion-item">
-                <h3 class="accordion-header" id="{{ subcategory|replace(' ', '_') }}Heading">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{{ subcategory|replace(' ', '_') }}Collapse" aria-expanded="false" aria-controls="{{ subcategory|replace(' ', '_') }}Collapse">
-                        {{ subcategory }}
-                    </button>
-                </h3>
-                <div id="{{ subcategory|replace(' ', '_') }}Collapse" class="accordion-collapse collapse" aria-labelledby="{{ subcategory|replace(' ', '_') }}Heading" data-bs-parent="#{{ category|replace(' ', '_') }}Accordion">
-                    <div class="accordion-body">
-                        <div class="row g-4">
-                            {% for tool in tools %}
-                            <div class="col-md-4">
-                                <div class="card h-100 shadow-sm">
-                                    <div class="card-body text-center">
-                                        <i class="{{ tool.icon }} fa-2x mb-3 text-primary"></i>
-                                        <h5 class="card-title">{{ tool.name }}</h5>
-                                        <p class="card-text">{{ tool.description }}</p>
-                                        <a href="{{ tool.link }}" class="btn btn-primary btn-sm">
-                                            Use Tool <i class="fas fa-arrow-right"></i>
-                                        </a>
+                {% for subcategory, tools in subcategories.items() %}
+                <div class="accordion-item">
+                    <h4 class="accordion-header" id="{{ subcategory|replace(' ', '_') }}Heading">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#{{ subcategory|replace(' ', '_') }}Collapse"
+                            aria-expanded="false" aria-controls="{{ subcategory|replace(' ', '_') }}Collapse">
+                            {{ subcategory }}
+                        </button>
+                    </h4>
+                    <div id="{{ subcategory|replace(' ', '_') }}Collapse" class="accordion-collapse collapse"
+                        aria-labelledby="{{ subcategory|replace(' ', '_') }}Heading"
+                        data-bs-parent="#{{ category|replace(' ', '_') }}Accordion">
+                        <div class="accordion-body">
+                            <div class="row g-4">
+                                {% for tool in tools %}
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="card h-100 shadow-sm">
+                                        <div class="card-body text-center">
+                                            <i class="{{ tool.icon }} fa-2x mb-3 text-primary"></i>
+                                            <h5 class="card-title">{{ tool.name }}</h5>
+                                            <p class="card-text">{{ tool.description }}</p>
+                                            <a href="{{ tool.link }}" class="btn btn-primary btn-sm">
+                                                Use Tool <i class="fas fa-arrow-right"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
+                                {% endfor %}
                             </div>
-                            {% endfor %}
                         </div>
                     </div>
                 </div>
+                {% endfor %}
+
             </div>
-            {% endfor %}
-
         </div>
-    </div>
-    {% endfor %}
-
+        {% endfor %}
+    </section>
 
     <!-- CTA Section -->
     <section class="cta-section mt-5">
@@ -136,8 +119,6 @@
         </div>
     </section>
 </div>
-
-
 
 <style>
     .hero-section {
@@ -162,16 +143,16 @@
         border: none;
     }
 
-    .card.bg-light {
-        background-color: #f8f9fa !important;
+    .card.border-success {
+        border-width: 2px !important;
+    }
+
+    .card.border-info {
+        border-width: 2px !important;
     }
 
     .accordion-button {
         font-weight: bold;
-    }
-
-    .expand-all {
-        margin-right: 5px;
     }
 </style>
 {% endblock %}
