--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@ updates to revision
 - cambiar icono comunicados por una alerta con badget
 - añádir darkmode
 
+-- SOLUCION MAS ROBUSTA PARA LA ACTIVACIÓN / LOCK DE CONTENIDOS
+-- Menu de admin
+
+
 para todos -> gestionar cuando devuelve error q no muestre el dashboard de resultados
 
 DOMINIOS
