--- a/TODO
+++ b/TODO
@@ -12,6 +12,8 @@ updates to revision
 
 -- SOLUCION MAS ROBUSTA PARA LA ACTIVACIÓN / LOCK DE CONTENIDOS
 -- Menu de admin
+-- flujos de registro y pago y renovación y formas de pago
+-- blur mas robusto
 
 
 para todos -> gestionar cuando devuelve error q no muestre el dashboard de resultados
