--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ updates to revision
 -- flujos de registro y pago y renovación y formas de pago
 -- blur mas robusto
 
+-- archivo .env para las variables
 
 para todos -> gestionar cuando devuelve error q no muestre el dashboard de resultados
 
